# videos_while_you_eat

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  dockerfile  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml
data/processed/: channels_pp.csv
notebooks/: no_complicated_embeddings.ipynb  quick_tests.ipynb  test3.ipynb  yt_data_2.ipynb
notebooks/data_sourcing/: ve_feature_collection.ipynb  yt_data_2.ipynb
notebooks/data_sourcing/archive/: deprecated_channel_sourcing.ipynb
notebooks/misc/: data_editing.ipynb  quick_tests.ipynb
notebooks/model/: ve_eda.ipynb  ve_no_description.ipynb  ve_test.ipynb
scripts/: migrate_artifacts_to_run.py  prepare_processed_data.py  run_pipeline.py  setup_db.py  test_pipeline_phase1_data_features.py  test_pipelines_phase1_data_features.py
scripts/data_pipeline/: collect_channels.py  df_cleaned_to_final.py  etl.py
scripts/database_setup/: df_cleaned_to_final_initial_batch.py  make_db.py  migrate_csv_to_rds.py
scripts/rds_data_collection/: collect_channels.py
src/: config.py
src/app/: main.py
src/core/: config.py  logging_config.py
src/data/: fetch_data_given_query_channel.py  load_data.py  preprocess_data.py  youtube_api.py
src/db/: connection.py
src/embedding/: __init__.py  model.py
src/features/: build_features.py
src/models/: evaluate.py  train.py  tune.py
src/serving/: artifact_loader.py  inference.py  model_repository.py
src/utils/: validate_data.py
src/youtube/: client.py
tests/: test_inference_with_mock_loader.py  test_model_repository.py
(+11 files in other folders)
