[project]
name = "videos-while-you-eat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.96",
    "fastapi>=0.136.1",
    "google-api-python-client>=2.194.0",
    "gradio>=6.13.0",
    "joblib>=1.5.3",
    "mlflow>=3.11.1",
    "mlflow-skinny>=3.11.1",
    "mlflow-tracing>=3.11.1",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "scikit-learn==1.6.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
